Add DbContext and Connect String

--- a/application/MapsAgo/MapsAgo.WebUI/Web.config
+++ b/application/MapsAgo/MapsAgo.WebUI/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MapsAgo.WebUI-20140411093127.mdf;Initial Catalog=aspnet-MapsAgo.WebUI-20140411093127;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="MapsDbContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\MapsDb.mdf;Integrated Security=True" providerName="System.Data.SqlClient"</add>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
