--- a/application/MapsAgo/MapsAgo.WebUI/MapsAgo.WebUI.csproj
+++ b/application/MapsAgo/MapsAgo.WebUI/MapsAgo.WebUI.csproj
@@ -170,6 +170,8 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="ControllersApi\EventController.cs" />
     <Compile Include="ControllersApi\LocationController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\EventController.cs" />
