--- a/application/MapsAgo/MapsAgo.Freebase/packages.config
+++ b/application/MapsAgo/MapsAgo.Freebase/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Google.Apis" version="1.8.1" targetFramework="net45" />
   <package id="Google.Apis.Core" version="1.8.1" targetFramework="net45" />
+  <package id="Google.Apis.Discovery.v1" version="1.8.1.410" targetFramework="net45" />
   <package id="Google.Apis.Freebase.v1" version="1.8.1.530" targetFramework="net45" />
   <package id="log4net" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.7" targetFramework="net45" />
