--- a/application/MapsAgo/MapsAgo.Tests/MapsAgo.Tests.csproj
+++ b/application/MapsAgo/MapsAgo.Tests/MapsAgo.Tests.csproj
@@ -88,6 +88,15 @@
   <ItemGroup>
     <Content Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MapsAgo.Web\MapsAgo.Web.csproj">
+      <Project>{6B6FD200-A465-4F8A-B15E-0F97E1D698CD}</Project>
+      <Name>MapsAgo.Web</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
