Adjust models, Add migrations and seed data

--- a/application/MapsAgo/MapsAgo/MapsAgo.csproj
+++ b/application/MapsAgo/MapsAgo/MapsAgo.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Model\EventType.cs" />
     <Compile Include="Model\Location.cs" />
     <Compile Include="Model\MapsAgoDb.cs" />
-    <Compile Include="Model\Media.cs" />
+    <Compile Include="Model\Medium.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
