--- a/application/MapsAgo/MapsAgo.Web/Web.config
+++ b/application/MapsAgo/MapsAgo.Web/Web.config
@@ -10,7 +10,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnetb-MapsAgo.Web-20140419053821.mdf;Initial Catalog=aspnetb-MapsAgo.Web-20140419053821;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnetc-MapsAgo.Web-20140419053821.mdf;Initial Catalog=aspnetc-MapsAgo.Web-20140419053821;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
