--- a/application/MapsAgo/MapsAgo.Web/Web.config
+++ b/application/MapsAgo/MapsAgo.Web/Web.config
@@ -10,7 +10,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>   
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MapsAgo.Web-20140419053821.mdf;Initial Catalog=aspnet-MapsAgo.Web-20140419053821;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\MapsAgoWebDb.mdf;Initial Catalog=MapsAgoWebDb;Integrated Security=True" providerName="System.Data.SqlClient"/>
     <add name="MapsAgoDb" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\mapsago_db.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
