--- a/application/MapsAgo/MapsAgo.Tests/MapsAgo.Tests.csproj
+++ b/application/MapsAgo/MapsAgo.Tests/MapsAgo.Tests.csproj
@@ -84,7 +84,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\EventsControllerTest.cs" />
-    <Compile Include="Model\UnitTest1.cs" />
+    <Compile Include="Model\ResourceModelTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
