--- a/application/MapsAgo/MapsAgo.Tests/MapsAgo.Tests.csproj
+++ b/application/MapsAgo/MapsAgo.Tests/MapsAgo.Tests.csproj
@@ -84,6 +84,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\EventsControllerTest.cs" />
+    <Compile Include="Domain\MockStrategy.cs" />
+    <Compile Include="Domain\TestInfoGatherer.cs" />
     <Compile Include="Model\ResourceModelTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
