--- a/application/MapsAgo/MapsAgo/packages.config
+++ b/application/MapsAgo/MapsAgo/packages.config
@@ -3,4 +3,6 @@
   <package id="EntityFramework" version="6.1.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net451" />
 </packages>
