--- a/application/MapsAgo/MapsAgo.Web/Web.Debug.config
+++ b/application/MapsAgo/MapsAgo.Web/Web.Debug.config
@@ -26,5 +26,9 @@
         <error statusCode="500" redirect="InternalError.htm"/>
       </customErrors>
     -->
+    <customErrors mode="Off" defaultRedirect="~/Error/General">
+      <error statusCode="404" redirect="~/Error/Http404"/>
+      <error statusCode="403" redirect="~/Error/Http403"/>
+    </customErrors>
   </system.web>
 </configuration>
