--- a/application/MapsAgo/MapsAgo.Tests/MapsAgo.Tests.csproj
+++ b/application/MapsAgo/MapsAgo.Tests/MapsAgo.Tests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Controllers\EventsControllerTest.cs" />
     <Compile Include="Domain\MockStrategy.cs" />
     <Compile Include="Domain\TestInfoGatherer.cs" />
+    <Compile Include="Domain\TestFreebaseStrategy.cs" />
     <Compile Include="Model\ResourceModelTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
