--- a/application/MapsAgo/MapsAgo.Web/Web.config
+++ b/application/MapsAgo/MapsAgo.Web/Web.config
@@ -11,6 +11,9 @@
   </configSections>
   <connectionStrings>   
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\MapsAgoWebDb.mdf;Initial Catalog=MapsAgoWebDb;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />    
+	<!--<add name="MapsAgoDb" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\mapsago_db.mdf;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\MapsAgoWebDb.mdf;Initial Catalog=MapsAgoWebDb;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\MapsAgoWebDb.mdf;Initial Catalog=MapsAgoWebDb;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
