--- a/application/MapsAgo/MapsAgo.Web/MapsAgo.Web.csproj
+++ b/application/MapsAgo/MapsAgo.Web/MapsAgo.Web.csproj
@@ -283,6 +283,10 @@
     <Content Include="Views\Shared\DisplayTemplates\EventItemViewModel.cshtml" />
     <Content Include="Views\Event\_EventPartials\_StartDate.cshtml" />
     <Content Include="Views\Event\_EventPartials\_EndDate.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\EventType.cshtml" />
+    <Content Include="Views\Event\_EventPartials\_CreateForm.cshtml" />
+    <Content Include="Views\Event\_EventPartials\_SearchBox.cshtml" />
+    <Content Include="Views\Event\_EventPartials\_SearchResults.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
