--- a/application/MapsAgo/MapsAgo.Tests/packages.config
+++ b/application/MapsAgo/MapsAgo.Tests/packages.config
@@ -4,5 +4,6 @@
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
+  <package id="Moq" version="4.2.1402.2112" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net451" />
 </packages>
